--- a/Client/HomePage.html
+++ b/Client/HomePage.html
@@ -6,6 +6,7 @@
     <title>Renewable Energy Leaderboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Rewnewable Energy Leaderboard</h1>
@@ -15,7 +16,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Rank</th>
+                        <th>Rankings</th>
                         <th>Name</th>
                         <th>Score</th>
                     </tr>
@@ -23,7 +24,7 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Alice</td>
+                        <td>1123 Victoria Dr</td>
                         <td>5000</td>
                     </tr>
                     <tr>
