A small change to Leaderboard info

--- a/Client/Leaderboard.html
+++ b/Client/Leaderboard.html
@@ -12,35 +12,35 @@
         <h1>Rewnewable Energy Leaderboard</h1>
     </header>
     <main>
-        <section class="leaderboard">
+        <div class="leaderboard">
             <table>
                 <thead>
                     <tr>
                         <th>Rankings</th>
                         <th>Name</th>
-                        <th>Score</th>
+                        <th>Energy Used kWh</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>1123 Victoria Dr</td>
-                        <td>5000</td>
+                        <td>Anonymous Duck</td>
+                        <td>900</td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>Bob</td>
-                        <td>4500</td>
+                        <td>1100</td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>Charlie</td>
-                        <td>4000</td>
+                        <td>1150</td>
                     </tr>
-                    <!-- Add more rows as needed -->
                 </tbody>
             </table>
-        </section>
+        </div>
+
     </main>
 </body>
 </html>
