--- a/Client/Shop.html
+++ b/Client/Shop.html
@@ -16,12 +16,14 @@
                 <img src="product1.jpg" alt="Product 1">
                 <h2>Tim's Gift Card $25</h2>
                 <p>4000 points</p>
+                <img src=https://company.timhortons.com/ca/images/en/goc-confirm-tim-card.png>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
                 <img src="product2.jpg" alt="Product 2">
                 <h2>Apple Gift Card $50</h2>
                 <p>10000 points</p>
+                <img src=https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/giftcard-og-202303_GEO_CA?wid=1200&hei=630&fmt=jpeg&qlt=95&.v=1679597544531 width = "400" height = "300">
                 <button>Add to Cart</button>
             </div>
         </section>
