--- a/Client/Login.html
+++ b/Client/Login.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Add your CSS animations and styles here */
+        footer {
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -13,7 +19,6 @@
         <h1>Welcome to the Energy Saving Hub</h1>
         <p>Changing The Future Through Energy Saving</p>
         <button class="login-button" onclick="redirectToDashboard()">Login to Dashboard</button>
-
     </header>
 
     <section class="leaderboard">
