--- a/Client/Login.html
+++ b/Client/Login.html
@@ -1,71 +1,86 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Energy Saving Hub</title>
+    <title>Login - Energy Saving Hub</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Add your CSS animations and styles here */
-        footer {
-            background-color: black;
-            color: white;
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .login-container {
+            background-color: #00a74a; /* Green background color */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
-            padding: 10px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h2 {
+            color: #fff; /* White text color */
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            background-color: #fff; /* White input field background */
+        }
+
+        button {
+            background-color: #007032; /* Darker green button color */
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #005827; /* Darker shade on hover */
+        }
+
+        .forgot-password {
+            color: #fff;
+            text-decoration: none;
+            margin-top: 10px;
+            display: inline-block;
+        }
+
+        .signup-link {
+            color: #fff;
+            text-decoration: none;
+            margin-top: 20px;
+            display: block;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Energy Saving Hub</h1>
-        <p>Changing The Future Through Energy Saving</p>
-        <button class="login-button" onclick="redirectToDashboard()">Login to Dashboard</button>
-    </header>
-
-    <section class="leaderboard">
-        <h2>Leaderboard</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th>Name</th>
-                    <th>Points</th>
-                    <th>Total Energy Saved</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>John Doe</td>
-                    <td>500</td>
-                    <td>10,000 kWh</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Jane Smith</td>
-                    <td>450</td>
-                    <td>8,000 kWh</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Michael Johnson</td>
-                    <td>400</td>
-                    <td>7,000 kWh</td>
-                </tr>
-                <!-- Add more leaderboard rows as needed -->
-            </tbody>
-        </table>
-    </section>
-
-    <footer>
-        <p>&copy; 2023 Energy Saving Hub</p>
-    </footer>
-
-    <script>
-        function redirectToDashboard() {
-            // Add code here to redirect users to the dashboard page after login
-            // For demonstration purposes, you can use window.location.href
-            // Example: window.location.href = "dashboard.html";
-        }
-    </script>
+    <div class="login-container">
+        <h2>Login to Energy Saving Hub</h2>
+        <form>
+            <input type="text" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <a href="#" class="forgot-password">Forgot Password?</a>
+        <a href="#" class="signup-link">Sign Up</a>
+    </div>
 </body>
 </html>
