--- a/Client/HomePage.html
+++ b/Client/HomePage.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renewable Energy Top Savers</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GameEnergy - Renewable Energy Website</title>
+  <link rel="stylesheet" href="homepagestyle.css">
 </head>
 <body>
-    <header>
-        <h1>Renewable Energy Website</h1>
-    </header>
-    <main>
-        <section class="content">
-            <h2>Welcome to Our Renewable Energy World</h2>
-            <p>Explore the power of renewable and green energy sources.</p>
-            <a href="LeaderBoard.html" class="btn">Go to Leaderboard</a>
-            <a href="Shop.html" class="btn">Go to Shop</a>
-        </section>
-    </main>
+  <header>
+    <div class="logo">
+      <h1>GameEnergy</h1>
+    </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="Leaderboard.html">Leaderboard</a>
+      <a href="Shop.html">Shop</a>
+      <a href="Login.html">Login</a>
+    </nav>
+  </header>
+
+  <section class="main-content">
+    <h1>Welcome to GameEnergy - Your Sustainable Energy Solution</h1>
+    <p>Explore sustainable energy solutions to power a better future.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 GameEnergy - Renewable Energy Company</p>
+  </footer>
 </body>
 </html>
